--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
 		<title>SimplyCmd</title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-	        	<li><a href="/Terracraft">Terracraft</a></li>
-    		</ul>
-		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi! Welcome to my WIP website!</h1>
@@ -17,8 +12,9 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="https://github.com/SimplyCmd">github.com/SimplyCmd</a></li>
-			</ul>
+        		<li><a href="https://github.com/SimplyCmd">Github Profile</a></li>
+			<li><a href="/Terracraft">Terracraft</a></li>
+		</ul>
 		</footer>
 	</body>
 </html>
